Update readme with setup instructions